--- a/index.html
+++ b/index.html
@@ -3,98 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAD SANTANA | SEGURANÇA MÁXIMA</title>
+    <title>CAD SANTANA | MODO FULL SCREEN</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
-        :root { --oab-dark: #0f172a; --oab-gold: #d4af37; }
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: var(--oab-dark); color: #f1f5f9; height: 100vh; overflow: hidden; }
-        header { background: linear-gradient(to right, #0f172a, #1e293b); border-bottom: 2px solid var(--oab-gold); }
-        .panel-card { background: rgba(30, 41, 59, 0.7); border: 1px solid rgba(212, 175, 55, 0.1); border-radius: 16px; backdrop-filter: blur(10px); }
-        .panel-header { background: rgba(212, 175, 55, 0.1); color: var(--oab-gold); padding: 10px 20px; border-radius: 16px 16px 0 0; font-size: 10px; font-weight: 800; text-transform: uppercase; letter-spacing: 2px; }
-        .input-oab { background: rgba(15, 23, 42, 0.5); border: 1px solid rgba(212, 175, 55, 0.2); border-radius: 8px; padding: 12px 15px; width: 100%; color: white; outline: none; }
-        .btn-gold { background: var(--oab-gold); color: #0f172a; font-weight: 800; text-transform: uppercase; padding: 14px; border-radius: 8px; font-size: 11px; }
-        .registro-item { background: rgba(255, 255, 255, 0.03); border-left: 4px solid var(--oab-gold); border-radius: 10px; margin-bottom: 8px; padding: 15px; display: flex; align-items: center; justify-content: space-between; }
+        :root { --oab-dark: #090e1a; --oab-gold: #d4af37; }
+        
+        body { 
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            background-color: var(--oab-dark); 
+            color: #f1f5f9; 
+            height: 100vh; 
+            display: flex;
+            flex-direction: column;
+            overflow: hidden; 
+        }
+
+        /* Header Premium */
+        header { 
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            border-bottom: 2px solid var(--oab-gold);
+            padding: 1.25rem 2.5rem;
+            z-index: 50;
+        }
+
+        /* Estilização da Escala em Tela Cheia */
+        .pdf-container {
+            flex-grow: 1;
+            height: calc(100vh - 120px); /* Ajuste dinâmico para ocupar a tela toda */
+            background: rgba(30, 41, 59, 0.5);
+            border-radius: 12px;
+            overflow: hidden;
+            border: 1px solid rgba(212, 175, 55, 0.1);
+        }
+
+        embed { width: 100%; height: 100%; }
+
+        /* Painel Lateral de Ocorrências (Flutuante para não atrapalhar o PDF) */
+        .side-panel {
+            position: absolute;
+            right: 20px;
+            top: 100px;
+            width: 320px;
+            max-height: 80vh;
+            z-index: 40;
+            background: rgba(15, 23, 42, 0.9);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(212, 175, 55, 0.2);
+            border-radius: 20px;
+            padding: 20px;
+            box-shadow: -10px 0 30px rgba(0,0,0,0.5);
+        }
+
+        .input-oab { background: rgba(0,0,0,0.3); border: 1px solid rgba(212, 175, 55, 0.2); border-radius: 8px; padding: 10px; width: 100%; color: white; outline: none; font-size: 13px; }
+        .btn-gold { background: var(--oab-gold); color: #0f172a; font-weight: 800; padding: 12px; border-radius: 8px; width: 100%; margin-top: 10px; text-transform: uppercase; font-size: 11px; }
+
         .admin-only { display: none !important; }
         .is-admin .admin-only { display: block !important; }
-        .is-admin .admin-flex { display: flex !important; }
-        embed { width: 100%; height: 100%; border-radius: 0 0 16px 16px; }
+        
+        .registro-item { background: rgba(255,255,255,0.05); border-left: 3px solid var(--oab-gold); padding: 10px; border-radius: 6px; margin-bottom: 8px; font-size: 11px; }
     </style>
 </head>
-<body class="flex flex-col" id="appBody">
+<body id="appBody">
 
-    <header class="p-5 text-white shadow-2xl">
-        <div class="max-w-[1700px] mx-auto flex justify-between items-center">
-            <div class="flex items-center gap-6">
-                <div class="bg-white/5 p-3 rounded-2xl border border-gold/20">
-                    <i class="fa-solid fa-scale-balanced text-3xl" style="color: var(--oab-gold);"></i>
-                </div>
+    <header>
+        <div class="max-w-[1800px] mx-auto flex justify-between items-center">
+            <div class="flex items-center gap-5">
+                <img src="https://raw.githubusercontent.com/cassiakelly995-lab/painel-triagem-juridica/main/santana-parnaiba-branco-e1744639876196-768x231.png" alt="OAB Santana" class="h-12">
+                <div class="h-8 w-[1px] bg-white/10 mx-2"></div>
                 <div>
-                    <h1 class="text-2xl font-extrabold tracking-tighter uppercase italic leading-none">CAD Santana de Parnaíba</h1>
-                    <p class="text-[10px] font-bold uppercase tracking-[0.4em] mt-2" style="color: var(--oab-gold);">Presidência: <span class="text-white">Dra. Maristela Gonçalves</span></p>
+                    <h1 class="text-xl font-black uppercase italic tracking-tighter text-white">CAD Santana de Parnaíba</h1>
+                    <p class="text-[9px] font-bold uppercase tracking-[0.3em] text-gold" style="color: var(--oab-gold);">Presidência: Dra. Maristela Gonçalves</p>
                 </div>
             </div>
-            <div class="flex gap-4 items-center">
-                <button id="lockBtn" onclick="authAdmin()" class="text-gold text-xs font-black uppercase hover:scale-105 transition-all"><i class="fa-solid fa-lock mr-2"></i> Acesso Restrito</button>
-                <button id="unlockBtn" onclick="logoutAdmin()" class="admin-only text-red-500 text-xs font-black uppercase hover:scale-105 transition-all"><i class="fa-solid fa-unlock mr-2"></i> Sair do Admin</button>
+
+            <div class="flex gap-4">
+                <button id="lockBtn" onclick="authAdmin()" class="text-white/50 text-[10px] font-black uppercase hover:text-gold transition-all"><i class="fa-solid fa-lock mr-2"></i> Admin</button>
+                <button id="unlockBtn" onclick="logoutAdmin()" class="admin-only text-red-500 text-[10px] font-black uppercase"><i class="fa-solid fa-unlock mr-2"></i> Sair</button>
                 <div class="admin-only">
                     <input type="file" id="upPDF" class="hidden" accept="application/pdf" onchange="handlePDF(this)">
-                    <button onclick="document.getElementById('upPDF').click()" class="bg-transparent text-gold border border-gold/40 px-6 py-2 rounded-full text-[10px] font-black uppercase hover:bg-gold hover:text-dark">Atualizar Escala</button>
+                    <button onclick="document.getElementById('upPDF').click()" class="bg-gold text-dark px-5 py-1.5 rounded-full text-[10px] font-black uppercase" style="background: var(--oab-gold); color: #000">Trocar PDF</button>
                 </div>
             </div>
         </div>
     </header>
 
-    <main class="max-w-[1700px] mx-auto grid grid-cols-12 gap-8 p-10 flex-grow overflow-hidden">
-        <div class="col-span-7 flex flex-col h-full">
-            <div class="panel-card flex-grow flex flex-col overflow-hidden">
-                <div class="panel-header text-center">Visualização da Escala Oficial</div>
-                <div id="pdfBox" class="flex-grow relative flex items-center justify-center bg-black/20 text-white/10">
-                    <i class="fa-solid fa-file-pdf text-8xl"></i>
-                </div>
+    <main class="p-5 flex-grow relative">
+        <div class="pdf-container" id="pdfBox">
+            <div class="flex flex-col items-center justify-center h-full opacity-20">
+                <i class="fa-solid fa-file-pdf text-8xl mb-4"></i>
+                <p class="font-black uppercase tracking-widest text-sm">Escala em Tela Cheia</p>
             </div>
         </div>
 
-        <div class="col-span-5 flex flex-col gap-6 overflow-hidden">
-            <div class="panel-card p-8 admin-only">
-                <div class="flex gap-6 mb-6">
-                    <button id="tabT" onclick="setTab('troca')" class="text-[11px] font-black uppercase border-b-2 border-gold text-gold">Trocas</button>
-                    <button id="tabF" onclick="setTab('falta')" class="text-[11px] font-black uppercase text-slate-500">Faltas</button>
-                </div>
-                <div id="formTroca" class="space-y-4">
-                    <div class="grid grid-cols-4 gap-3">
-                        <input type="text" id="tDia" placeholder="Dia" class="input-oab col-span-1 text-center">
-                        <input type="text" id="tSai" placeholder="Advogado(a) que SAI" class="input-oab col-span-3">
-                    </div>
-                    <input type="text" id="tEntra" placeholder="Advogado(a) que ENTRA" class="input-oab">
-                    <button onclick="addTroca()" class="w-full btn-gold">Registrar Alteração</button>
-                </div>
-                <div id="formFalta" class="hidden space-y-4">
-                    <div class="grid grid-cols-4 gap-3">
-                        <input type="text" id="fDia" placeholder="Dia" class="input-oab col-span-1 text-center">
-                        <input type="text" id="fNome" placeholder="Advogado(a) Faltante" class="input-oab col-span-3">
-                    </div>
-                    <button onclick="addFalta()" class="w-full bg-red-600 text-white py-4 rounded-lg text-[11px] font-black uppercase">Registrar Falta</button>
+        <div class="side-panel shadow-2xl">
+            <div class="admin-only mb-6 border-b border-white/10 pb-4">
+                <h4 class="text-[10px] font-black uppercase mb-3 text-gold" style="color: var(--oab-gold);">Novo Registro</h4>
+                <div class="space-y-3">
+                    <input type="text" id="tDia" placeholder="Dia (ex: 15/02)" class="input-oab">
+                    <input type="text" id="tSai" placeholder="Sai: Advogado(a)" class="input-oab">
+                    <input type="text" id="tEntra" placeholder="Entra: Advogado(a)" class="input-oab">
+                    <button onclick="addTroca()" class="btn-gold">Confirmar Troca</button>
                 </div>
             </div>
-            <div class="flex-grow overflow-y-auto pr-3">
-                <h3 class="text-[10px] font-black text-slate-500 uppercase tracking-widest mb-4">Relatório de Ocorrências</h3>
-                <div id="listaItems" class="space-y-2"></div>
-            </div>
+
+            <h4 class="text-[10px] font-black uppercase mb-4 opacity-50 tracking-widest text-center">Relatório de Trocas e Faltas</h4>
+            <div id="listaItems" class="overflow-y-auto max-height-[40vh] space-y-2">
+                </div>
         </div>
     </main>
 
     <script>
-        const MASTER_KEY = "CAD2026"; // Senha Única
+        const MASTER_KEY = "CAD2026"; 
         let db = JSON.parse(localStorage.getItem('cad_secure_v8')) || [];
 
         function authAdmin() {
-            const input = prompt("🔐 Identificação Requerida:");
+            const input = prompt("🔐 Senha de Admin:");
             if(input === MASTER_KEY) {
                 sessionStorage.setItem('isAdmin', 'true');
                 applySecurity();
-            } else { alert("Acesso Negado."); }
+            } else { alert("Acesso negado."); }
         }
 
         function logoutAdmin() {
@@ -104,7 +133,7 @@
 
         function applySecurity() {
             const isAdm = sessionStorage.getItem('isAdmin') === 'true';
-            document.getElementById('appBody').className = isAdm ? 'flex flex-col is-admin' : 'flex flex-col';
+            document.getElementById('appBody').className = isAdm ? 'is-admin' : '';
             document.getElementById('lockBtn').style.display = isAdm ? 'none' : 'block';
             renderLista();
         }
@@ -120,52 +149,39 @@
 
         function renderPDF() {
             const data = localStorage.getItem('pdf_secure');
-            if (data) document.getElementById('pdfBox').innerHTML = `<embed src="${data}#toolbar=0" type="application/pdf">`;
+            if (data) document.getElementById('pdfBox').innerHTML = `<embed src="${data}#toolbar=0&view=FitH" type="application/pdf">`;
         }
 
         function addTroca() {
-            if(sessionStorage.getItem('isAdmin') !== 'true') return;
             const d = document.getElementById('tDia').value, s = document.getElementById('tSai').value, e = document.getElementById('tEntra').value;
-            if (d && s && e) { db.unshift({ id: Date.now(), tipo: 'troca', d, s, e }); save(); }
-        }
-
-        function addFalta() {
-            if(sessionStorage.getItem('isAdmin') !== 'true') return;
-            const d = document.getElementById('fDia').value, n = document.getElementById('fNome').value;
-            if (d && n) { db.unshift({ id: Date.now(), tipo: 'falta', d, n }); save(); }
-        }
-
-        function save() {
-            localStorage.setItem('cad_secure_v8', JSON.stringify(db));
-            document.querySelectorAll('input').forEach(i => i.value = '');
-            renderLista();
+            if (d && s && e) { 
+                db.unshift({ id: Date.now(), d, s, e }); 
+                localStorage.setItem('cad_secure_v8', JSON.stringify(db));
+                document.querySelectorAll('input').forEach(i => i.value = '');
+                renderLista();
+            }
         }
 
         function renderLista() {
             const box = document.getElementById('listaItems');
             const isAdm = sessionStorage.getItem('isAdmin') === 'true';
-            box.innerHTML = db.length ? '' : '<p class="text-center py-10 opacity-10 uppercase font-black text-xs">Sem Ocorrências</p>';
+            box.innerHTML = db.length ? '' : '<p class="text-center py-5 opacity-20 text-[10px] font-bold">NENHUMA ALTERAÇÃO</p>';
             db.forEach(item => {
-                const isT = item.tipo === 'troca';
-                box.innerHTML += `<div class="registro-item ${!isT ? 'border-red-500' : ''}">
-                    <div class="text-[11px] uppercase font-bold">
-                        <span class="text-gold mr-3">[${item.d}]</span>
-                        ${isT ? `<s>${item.s}</s> → <span class="text-white">${item.e}</span>` : `<span class="text-red-500">FALTA: ${item.n}</span>`}
+                box.innerHTML += `<div class="registro-item">
+                    <div class="flex justify-between items-start">
+                        <span><b class="text-gold">${item.d}</b>: <s>${item.s}</s> → <span class="text-white font-bold">${item.e}</span></span>
+                        ${isAdm ? `<button onclick="del(${item.id})" class="text-red-500 ml-2"><i class="fa-solid fa-trash"></i></button>` : ''}
                     </div>
-                    ${isAdm ? `<button onclick="del(${item.id})" class="text-white/10 hover:text-red-500"><i class="fa-solid fa-trash-can"></i></button>` : ''}
                 </div>`;
             });
         }
 
         function del(id) { 
-            if(confirm("Deseja realmente apagar este registro oficial?")) {
-                db = db.filter(x => x.id !== id); save(); 
+            if(confirm("Apagar registro oficial?")) {
+                db = db.filter(x => x.id !== id);
+                localStorage.setItem('cad_secure_v8', JSON.stringify(db));
+                renderLista();
             }
-        }
-
-        function setTab(t) {
-            document.getElementById('formTroca').classList.toggle('hidden', t !== 'troca');
-            document.getElementById('formFalta').classList.toggle('hidden', t !== 'falta');
         }
 
         window.onload = () => { applySecurity(); renderPDF(); };
